--- a/week3b/hotel.css
+++ b/week3b/hotel.css
@@ -1,1 +1,20 @@
 /*Exercise3b*/
+*{
+    box-sizing: border-box;
+    font-family: san-serif;
+}
+
+#wrapper{
+    max-width: 1000px;
+    margin: 0 auto;
+}
+p, li{
+    font-size: 0.875em;
+    line-height: 1.6;
+}
+.subhead{
+    font-size: 80%;
+    margin-top: 0;
+    padding-top: 0;
+
+}
