--- a/project1/week1.css
+++ b/project1/week1.css
@@ -1,6 +1,6 @@
 body {
     margin: 0;
-    background-image: url("../css/marble.jpg");
+    background-image: url("marble.jpg");
 }
 
 div.container {
