--- a/Exercises/week5a/week5a.css
+++ b/Exercises/week5a/week5a.css
@@ -29,5 +29,16 @@ aside{
     background-color:#e5e5e5;
     padding: 15px;
     margin-top: 7px;
+}
+@media screen and (min-width: 620px){
+    aside, nav{
+        float: left;
+        width:20%;
+    }
+    article{
+        float:left;
+        width:60%;
+        padding: 0 20px;
 
+    }
 }
