--- a/Exercises/week6a/holygrail.css
+++ b/Exercises/week6a/holygrail.css
@@ -22,6 +22,8 @@ Flexbox Formatting
     /* centers container in viewport */
     margin: 0 auto;
     max-width: 95vw; 
+    display: flex;
+    flex-direction: column;
 }
 
 main {
@@ -30,6 +32,8 @@ main {
     border: 1px solid black; 
     background-color: #ccc;
     margin: .5rem 0; 
+    display: flex;
+    flex-direction: row;
 
 }
 
