--- a/Exercises/week6b/holygrail-grid.css
+++ b/Exercises/week6b/holygrail-grid.css
@@ -40,4 +40,29 @@ nav, aside {
 /*****************
 Grid Formatting  
 *****************/
+#wrapper{
+    display: grid;
+    display: grid;
+    height: 100vh;
+    grid-template-areas: "header" "sidenav" "article" "sidebar" "footer";
+    grid-template-rows: 1fr 2fr 10fr 2fr 1fr;
+}
+header {
+    grid-area: header;
+}
 
+nav {
+    grid-area: sidenav;
+}
+
+article {
+    grid-area: article;
+}
+
+aside {
+    grid-area: sidebar;
+}
+
+footer {
+    grid-area: footer
+}
