--- a/Exercises/week6b/holygrail-grid.css
+++ b/Exercises/week6b/holygrail-grid.css
@@ -66,3 +66,12 @@ aside {
 footer {
     grid-area: footer
 }
+@media screen and (min-width: 760px){ 
+    #wrapper {
+        grid-template-areas: "header header header"  /* 1st row: header spans three columns  */
+        "sidenav article sidebar"  /* 2nd row: one element in each of 3 columns  */
+        "footer footer footer"; /* 3rd row: footer spans three columns */
+        grid-template-rows: 1fr 10fr 1fr;   /* defines relative height of three rows */
+        grid-template-columns: 20% auto 20%;   /* defines width of the three columns */
+    }
+}
