--- a/Exercises/week6c/responsive-grid.css
+++ b/Exercises/week6c/responsive-grid.css
@@ -34,3 +34,8 @@ body {
 /**************
 Grid Formatting
 **************/
+main{
+    display: grid; 
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: .5rem;
+}
