--- a/Exercises/week6c/responsive-grid.css
+++ b/Exercises/week6c/responsive-grid.css
@@ -38,4 +38,9 @@ main{
     display: grid; 
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: .5rem;
+    display: block;
+    width:100%;
+    border: 2px, solid black;
+    border-radius: 5px;
+ 
 }
