--- a/Exercises/week6c/responsive-grid.css
+++ b/Exercises/week6c/responsive-grid.css
@@ -38,6 +38,10 @@ main{
     display: grid; 
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: .5rem;
+    align-self: center;
+    max-width:95vw;
+    margin: .5rem 0;
+
  
 }
 img{
