--- a/Exercises/week6c/responsive-grid.css
+++ b/Exercises/week6c/responsive-grid.css
@@ -48,3 +48,8 @@ img{
     border: 2px solid black;
     border-radius: 5px;
 }
+@supports (display: grid) {
+    .warning {
+        display: none;
+    }
+}
