--- a/Exercises/week8a/cssanimation/animation.css
+++ b/Exercises/week8a/cssanimation/animation.css
@@ -97,3 +97,11 @@ main {
     main div:nth-child(4) {
             animation: entrance .5s linear both;
             }
+
+    main img { transition: all .2s ease-in-out; }
+    main img:hover { transform: scale(1.2); }
+
+    a:hover .fa { 
+        color: #ccc;
+        animation: spin .5s linear both;
+        }
