--- a/Exercises/week8a/cssanimation/animation.css
+++ b/Exercises/week8a/cssanimation/animation.css
@@ -101,6 +101,10 @@ main {
     main img { transition: all .2s ease-in-out; }
     main img:hover { transform: scale(1.2); }
 
+    @keyframes spin{
+        0%{transform:rotate(0 turn); }
+        100%{transform: rotateY(360deg);}
+    }
     a:hover .fa { 
         color: #ccc;
         animation: spin .5s linear both;
