--- a/projects/project2/project2.css
+++ b/projects/project2/project2.css
@@ -30,7 +30,15 @@ main {
     main div:nth-child(1) {
         animation: entrance 2s linear both;
         }
-
+    main div:nth-child(2) {
+            animation: entrance 1.5s linear both;
+            }        
+    main div:nth-child(3) {
+        animation: entrance 1s linear both;
+        }
+    main div:nth-child(4) {
+            animation: entrance .5s linear both;
+            }
 
     main img { transition: all .2s ease-in-out; }
     main img:hover { transform: scale(1.2); }
