--- a/projects/project2/project2.css
+++ b/projects/project2/project2.css
@@ -17,7 +17,7 @@ nav{
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
-    line-height: 30px;
+    line-height: 65px;
     text-align: right;
     float: right;
     width:30%;
@@ -65,10 +65,18 @@ Not sure what this does yet
 */
 .logo-wrap{
     color:rgb(244, 66, 75);
-    text-decoration: none;
     font-weight: 900;
     font-size: 24;
-    text-align: center;
+    max-width: 100%;
+    margin-left: 40%;
+    margin-right: 0%;
+    padding-bottom: 0px;
+    padding-top: 0px;
+    width: 40%;
+    flex: 1 1 0%;
+    box-sizing: border-box;
     display: flex;
 }
+
+
 
