--- a/projects/project2/project2.css
+++ b/projects/project2/project2.css
@@ -63,12 +63,14 @@ Not sure what this does yet
     display: table;
 }
 */
-.logo-wrap{
+/*need to figure out why it is not center*/
+.name{
+    font-family: 'Open Sans', sans-serif;
+    align-content: center;
     color:rgb(244, 66, 75);
     font-weight: 900;
-    font-size: 24;
+    font-size: 36;
     max-width: 100%;
-    margin-left: 40%;
     margin-right: 0%;
     padding-bottom: 0px;
     padding-top: 0px;
@@ -76,7 +78,42 @@ Not sure what this does yet
     flex: 1 1 0%;
     box-sizing: border-box;
     display: flex;
+    font-style: italic;
 }
+.introduction{
+    max-width: 800px;
+    align-items: center;
+    margin-left: 30%;
+    margin-right: 30%;
+    display: flex;
+    
 
+}
+.welcome{
+    color:black;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    line-height: 28px;
+    text-align: center;
+    font-weight: 900;
+}
+.subhead{
+    color: rgb(153, 153, 153);
+    font-family: 'Open Sans', sans-serif;
+    font-size: 18px;
+    font-weight: normal;
+    line-height: 28px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    text-align: center;
+    text-transform: none;
+    display: inline-block;
+    width: 100%;
+    word-wrap: break-word;
+    box-sizing: border-box;
 
+}
+img.phones{
+    max-width: 50%;
+}
 
