--- a/projects/project2/project2.css
+++ b/projects/project2/project2.css
@@ -64,7 +64,7 @@ Not sure what this does yet
 }
 */
 /*need to figure out why it is not center*/
-.name{
+.logo-wrap{
     font-family: 'Open Sans', sans-serif;
     align-content: center;
     color:rgb(244, 66, 75);
