--- a/projects/project2/project2.css
+++ b/projects/project2/project2.css
@@ -55,7 +55,7 @@ a:hover {
     color:rgb(244, 66, 75);
     font-weight: 900;
   font-weight: bolder;
-  text-decoration-line: underline;
+  
 
 }
 /*
@@ -115,7 +115,66 @@ Not sure what this does yet
     box-sizing: border-box;
 
 }
+.container {
+    position: relative;
+    text-align: center;
+    width:100%;
+    height:400px;
+    box-sizing: border-box;
+    display: block;
+}
+.centered {
+    color: #3b3939;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 48px;
+    font-weight: bolder;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-style: italic;
+
+}
+img{
+    padding-top: 50px;
+    opacity: 0.2;
+    filter: alpha(opacity=50);
+    height:400px;
+
+}
+img:hover {
+    opacity: 1;
+    filter: alpha(opacity=50);
+   
+ 
+}
+.container2 {
+    margin: 10px;
+    position: relative;
+    text-align: center;
+    width:100%;
+    height:400px;
+    box-sizing: border-box;
+    display: block;
+}
+.centered2 {
+    margin: 10px;
+    color: #3b3939;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 48px;
+    font-weight: bolder;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-style: italic;
+
+}
+
+
+/*
 .box1{
+    padding-top: 50px;
     clear: left;
     margin-left: 0;
     margin-right: 0;
@@ -129,10 +188,9 @@ Not sure what this does yet
     box-sizing: border-box;
 }
 .cover-image-wrap{
-    padding-top: 50px;
     float: left;
-    width: 60%;
-    height: 450px;
+    width: 49%;
+    height: 400px;
     overflow: hidden;
     position: relative;
     box-sizing: border-box;
@@ -141,7 +199,7 @@ Not sure what this does yet
 .cover-image{
     border-radius: 0px;
     width: 100%;
-    background-position: center center;
+    background-position: center, center;
     background-size: cover;
     height: 100%;
     position: relative;
@@ -149,18 +207,52 @@ Not sure what this does yet
     display: block;
 
 }
-.cover-normal{
-    left: 0;
-    min-height: 100%;
-    position: absolute;
-    top: 0;
-    border-radius: 0px;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: block;
-    min-height: 100%;
-    overflow: hidden;
-    width: 100%;
+/*
+
+.details{
+ 
+    background:blue;
+    opacity: .1; 
+    padding-top: 50px;
+    float: right;
+    padding-bottom: 0%;
+    padding-top: 0%;
+    width: 49%;
+    position: relative;
+    height: 400px;
     box-sizing: border-box;
+    display: block;
+
 }
+.details-inner{
+    padding-top: 50px;
+    top: 50%;
+    left: 0;
+    position: absolute;
+    width: 100%;
+    padding-bottom: 6%;
+    padding-left: 8%;
+    padding-right: 8%;
+    padding-top: 6%;
+    overflow: hidden;
+    box-sizing: border-box;
+    display: block; 
+}
+.title1{
+    color: #191919;
+    float: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    font-weight: normal;
+    font-weight: 500;
+    line-height: 24px;
+    margin: auto;
+    text-align: center;
+    width: 100%;
+ 
+}
+.phone{
+height: 100%;
+width: 50%;
+}
+*/
