--- a/projects/project2/resume/resume.css
+++ b/projects/project2/resume/resume.css
@@ -41,7 +41,12 @@ a.print:hover{
     padding-top: 120px;
   
   }
-  
+  h1,h2{
+    color:gray;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 32px;
+    font-weight: 900;
+  }
   body {
     color:grey;
       min-width: 700px;
@@ -53,7 +58,7 @@ a.print:hover{
 
   .stuff {
     display: inline-block;
-    margin-top: 2px;
+    margin-top: .5px;
     margin-left: 55px;
     width: 75%;
     height: 1000px;
