--- a/projects/project2/contact/contact.css
+++ b/projects/project2/contact/contact.css
@@ -34,7 +34,7 @@ img.image {
 h1 {
     font-family:'Open Sans', sans-serif;
     font-size: 24pt;
-    color: #33144c;
+    color: rgb(244, 66, 75);
     margin-left: 45%;
     align-content: center;
 
