--- a/project3/resume/resume.css
+++ b/project3/resume/resume.css
@@ -78,26 +78,25 @@
     margin: 10px;
     padding: 2px;
   }
+.mygrid{
 
+  width: 100%;
+  max-width: 1500px;
+  display: grid;
+  min-height: 100%;
+  height:100%;
+  grid-template-areas:"body" "stuff";
+  grid-template-rows: 0% 100%;
+  grid-template-columns: 100% ;
   
-  @media only screen and (max-width: 430px) {
-    .left,
-    .right {
-      display: none;
-    }
-    .stuff {
-      width: 100%;
-      margin-left: 10px;
-    }
+}
+  
+  @media only screen and (max-width: 700px) {
+ .mygrid{
+  display: grid;
+  grid-template-areas:"body" "stuff";
+  grid-template-rows: 0% 100%;
+  grid-template-columns: 100%;
+ }
   }
-*/
-  .button{
-	border: 1px solid;
-	padding: 1.5;
-	background: white;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	
-  }*/
+ 
