--- a/project3/index.css
+++ b/project3/index.css
@@ -166,8 +166,8 @@ body {
   grid-column:2/2;
 }
 .title2{
-  min-height:100%;
-  min-width: 100%;
+  height:100%;
+  width: 100%;
   align-items: center;
   justify-content: center;
   text-align: center;
