--- a/project3/notes/notes.css
+++ b/project3/notes/notes.css
@@ -1,16 +1,128 @@
-ul,li{
-    color: #999999;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 65px;
+/*********************************
+General Formatting (Do Not Change)
+*********************************/
+
+* {
+    box-sizing: border-box;
 }
-h2{
-    color: color:rgb(244, 66, 75);
-    font-family: 'Open Sans', sans-serif;
-    font-size: 32px;
-    font-style: italic;
-    font-weight: 900;
-    line-height: 65px;
+
+html {
+    /* sets base font size for rem sizing */
+    font-size: 16px;
+    font-family: Calibri, Helvetica, Arial, sans-serif;
+}
+
+html,
+body {
+    padding: 0;
+    margin: 0;
+}
+
+header,
+footer {
+    background-color: #86af49;
+}
+
+nav,
+aside,
+article {
+    padding: .5rem;
+}
+
+nav, aside {
+    background-color: #b5e7a0;
+}
+
+
+/**************
+Your Formatting
+***************/
+
+* {
+    box-sizing: border-box;
+}
+
+html {
+    /* sets base font size for rem sizing */
+    font-size: 16px;
+    font-family: Calibri, Helvetica, Arial, sans-serif;
+}
+
+html,
+body {
+    margin: 0;
+}
+
+header,
+footer {
+    /* centers header and footer content horizontally and vertically */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #86af49;
+}
+
+nav,
+aside,
+article {
+    padding: .5rem;
+}
+
+nav, aside {
+    background-color: #b5e7a0;
+    border: 1px dotted black; 
+  
+}
+.menuitem{
+    background-color: azure;
+    text-align: center;
+    margin: 2px;    
+}
+.submenu{
+ background-color:lightgrey;
+ margin: 2px;   
+ list-style-type: none;
+}
+/*****************
+Grid Formatting  
+*****************/
+#wrapper{
+    display: grid;
+    display: grid;
+    height: 100vh;
+    grid-template-areas: "header" "sidenav" "article" "sidebar" "footer";
+    grid-template-rows: 1fr 2fr 10fr 2fr 1fr;
+  
+}
+header {
+    grid-area: header;
+
+}
+
+nav {
+    grid-area: sidenav;
+}
+article {
+    grid-area: article;
+}
+
+aside {
+    grid-area: sidebar;
+}
+
+footer {
+    grid-area: footer
+}
+.submenu{
+display: none;
+padding: 10px;
+}
+@media screen and (min-width: 760px){ 
+    #wrapper {
+        grid-template-areas: "header header header"  /* 1st row: header spans three columns  */
+        "sidebar article sidenav"  /* 2nd row: one element in each of 3 columns  */
+        "footer footer footer"; /* 3rd row: footer spans three columns */
+        grid-template-rows: 1fr 10fr 1fr;   /* defines relative height of three rows */
+        grid-template-columns: 25% auto 20%;   /* defines width of the three columns */
+    }
 }
