--- a/Project 3/notes/notes.css
+++ b/Project 3/notes/notes.css
@@ -14,19 +14,21 @@ html {
 
 html,
 body {
+    font-family: 'Assistant', sans-serif;
+    font-style:thin;
     padding: 0;
     margin: 0;
 }
 
 header,
-footer {
+ {
     background-color: #86af49;
 }
 
 nav,
 aside,
 article {
-    padding: .5rem;
+    padding: 0px;
 }
 
 nav, aside {
@@ -53,13 +55,14 @@ body {
     margin: 0;
 }
 
-header,
-footer {
+header
+ {
     /* centers header and footer content horizontally and vertically */
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #86af49;
+    background-color: #ffe6e6;
+    filter: drop-shadow(6px 6px 6px #ef2651);
 }
 
 nav,
@@ -69,8 +72,7 @@ article {
 }
 
 nav, aside {
-    background-color: #b5e7a0;
-    border: 1px dotted black; 
+    background-image: linear-gradient(#ffe6e6, white);
   
 }
 .menuitem{
@@ -90,8 +92,8 @@ Grid Formatting
     display: grid;
     display: grid;
     height: 100vh;
-    grid-template-areas: "header" "sidenav" "article" "sidebar" "footer";
-    grid-template-rows: 1fr 2fr 10fr 2fr 1fr;
+    grid-template-areas: "header" "sidenav" "article" "sidebar";
+    grid-template-rows: 1fr 1fr 10fr 1fr ;
   
 }
 header {
@@ -110,9 +112,6 @@ aside {
     grid-area: sidebar;
 }
 
-footer {
-    grid-area: footer
-}
 .submenu{
 display: none;
 padding: 10px;
@@ -121,8 +120,8 @@ padding: 10px;
     #wrapper {
         grid-template-areas: "header header header"  /* 1st row: header spans three columns  */
         "sidebar article sidenav"  /* 2nd row: one element in each of 3 columns  */
-        "footer footer footer"; /* 3rd row: footer spans three columns */
+        "sidebar article sidenav"; /* 3rd row: footer spans three columns */
         grid-template-rows: 1fr 10fr 1fr;   /* defines relative height of three rows */
-        grid-template-columns: 25% auto 20%;   /* defines width of the three columns */
+        grid-template-columns: 10% auto 10%;   /* defines width of the three columns */
     }
 }
