--- a/fall2018makeup/fall2018finalmakeup.css
+++ b/fall2018makeup/fall2018finalmakeup.css
@@ -93,12 +93,12 @@ footer {
 
 @media screen and (min-width: 1100px) {
     #pagegrid {
- 
+        
         grid-template-rows: 80px 1fr 1fr 30px;
         grid-template-columns: 200px 2fr 1fr;
-        width: 95%;
         margin: 0 auto;
-        max-height: 100vh;
+        width: 95%;
+        min-height: 100vh;
         background-color: lightblue;
         
     }
