--- a/fall2018makeup/fall2018finalmakeup.css
+++ b/fall2018makeup/fall2018finalmakeup.css
@@ -98,7 +98,7 @@ footer {
         grid-template-columns: 200px 2fr 1fr;
         margin: 0 auto;
         width: 95%;
-        max-height: 100vh;
+        height: 100vh;
         background-color: lightblue;
         
     }
